@@ -11,16 +11,20 @@ DIST JAXB2_src_20070917.jar 3637804 RMD160 2c6c96bebb366928ac4b0c82dbc4d7092e087
 DIST jaxb-ri-2_1_10.src.zip 21253298 RMD160 62af2b49be27a40f9842e03e939513c9f69b0ecf SHA1 745c83e6259c25463e3dff151bb6379a80b5b43c SHA256 514111fe6a1b57ad80d9f1299baeb305edd29dfee2c803a4e17c3ee4ae5fe0af
 DIST jaxb-ri-2_1_11.src.zip 21242741 RMD160 9b33a29485c2d26e08f1c9604a2f83a84a1b5c5f SHA1 00bcdc0947f6244c2d842f815aa58b4ad71ca2ad SHA256 c454e4bc975742028108b3831163c4278c6e21214be87c4e218f05e169f7132e
 DIST jaxb-ri-2_1_12.src.zip 30207450 RMD160 ab676f2a4ef73a8265884d3050733d6ea4793579 SHA1 b5a2521c63e368e44793ca7f1662790b929188a1 SHA256 f1b8816d6744ba8f77143e6a7c79e832b0a5637c3d198616b4eeb90624ad807e
+DIST jaxb-ri-2_1_13.src.zip 30571590 RMD160 3f9b030f725f8b6abdbe514828a1c0d4459cdfce SHA1 21a8645af05242bb41e18349b496198401ad69d7 SHA256 2740a6468124c643085b127228227b857cfecc32a7df1570a09e9801cdcb2955
 DIST jaxb-ri-2_1_9.src.zip 21131640 RMD160 f6d483cd88a2ccabe186778de0abccff39800c93 SHA1 784ba73ce1b1cb1123ba69e428678703ef875acc SHA256 8f21d5b340af39ca6520c0f0792ecb138ef471e48d887c75f801db7de70126ea
 DIST jaxb-ri-2_2.src.zip 30470011 RMD160 4fb67468ed02f3a5d9a76e5c177ecd8e9c364978 SHA1 50fe82ac1368449831e71d767afdc8803fc12d69 SHA256 18e5a795cfac569b5eed6b3b3d1c3065eef81b84679c9cbc95c48587ae2c5db4
+DIST jaxb-ri-2_2_1.src.zip 30601200 RMD160 55f6adf9fafb0034d2dbe9011b9469b2bb62252b SHA1 6e5b398842d6a8269ff25beadfc9af87574c1088 SHA256 3bb8e33f0c4a7b62f9f41ebb9b484520f90938ed81a3f3e0301617b057cb1106
 DIST jaxb-src-1.0.6.zip 6390814 RMD160 d0aa477aaefd201c45e107c00dce6774d2ed1a2d SHA1 5d02d91b978c4ad8f6e1b9f6c79778b1d67edb9b SHA256 6e890aafb8f7c47013c3c335aeac532e8a795140a08bc59a1910358bdb7af1f8
 EBUILD jaxb-1.0.6-r1.ebuild 1740 RMD160 09f0c3c361f8be8bda8fe089e6fdb9cf71d6546b SHA1 b8af3d608d394fb8155e2a93a1ea2649ad760fc4 SHA256 79d7906636f02550b3f841137232a4302ea31eb1d68207c8ce36e5dcfaab13fb
 EBUILD jaxb-1.0.6.ebuild 1107 RMD160 031efd48d6cbc98ffc78d3abd9be2f8287eb262e SHA1 57fff07c2a0baa07c8afbf60fd9a3a2d7668d4e6 SHA256 8c6625b74b7ce0f4b79e643e93e06d209c8ce3d2c32da2bbc424d9cd87859cad
 EBUILD jaxb-2.1.10.ebuild 6021 RMD160 d3e1fb7f9b5c2c02add8b0e5290ec49210a08b53 SHA1 4bbbfbfc3aab4a1078ba0254910c2d23ca4188cc SHA256 c97329138d0aba5bdcaf27248f5c42fe30edf86f466ca6a3d97c32b9bc4fba09
 EBUILD jaxb-2.1.11.ebuild 6021 RMD160 d3e1fb7f9b5c2c02add8b0e5290ec49210a08b53 SHA1 4bbbfbfc3aab4a1078ba0254910c2d23ca4188cc SHA256 c97329138d0aba5bdcaf27248f5c42fe30edf86f466ca6a3d97c32b9bc4fba09
 EBUILD jaxb-2.1.12.ebuild 5478 RMD160 acbe609fdfaf397b1a50b6ae359767bf2b532991 SHA1 e41e80ac4904a47f8639b21d90f2b559f3287628 SHA256 d87d85f11d75e7023392d68eaf17bdf1567e53c3c2d68ca98f575a0f1f7c4087
+EBUILD jaxb-2.1.13.ebuild 5478 RMD160 66ef714aee7c8f3f66218bc96af110b1089a9311 SHA1 be0eeca6a5cfde8cdb658d0ca1b565676394266e SHA256 f245cf2466a8bb38a051a991205364dd4f5a70ff540f2e5b2c4b63c2360dd6a2
 EBUILD jaxb-2.1.5.ebuild 1587 RMD160 c9e5c89a8a370de282e2a324b228ab7ef0d4faf6 SHA1 c74b3b88d075b43cdb85e000ac3d7ebe6f4c6bf0 SHA256 bba600d8941b37a5d56115885dc558f9635f534c163e083b42d050a74d83ecce
 EBUILD jaxb-2.1.9.ebuild 5849 RMD160 f88dabf6ab27926a5a65c808d422c6c91a8fb34b SHA1 3bce7eca064e60874e8a5d3f74f06de0166eeb2a SHA256 fb2639ba8d510aa73468b5eae2ae71297232732f0abf5db6fbae0acba373a3aa
+EBUILD jaxb-2.2.1.ebuild 5426 RMD160 ff9b6af140cdc57c71e8b47571935afa5b944d96 SHA1 27a50ca9a7443e55e0ebda38d329e164a2151622 SHA256 3618cd5f325d502baaccf96b70fd9bf8553e5f6e4cc4e0feb31202808dd48256
 EBUILD jaxb-2.2.ebuild 5426 RMD160 ff9b6af140cdc57c71e8b47571935afa5b944d96 SHA1 27a50ca9a7443e55e0ebda38d329e164a2151622 SHA256 3618cd5f325d502baaccf96b70fd9bf8553e5f6e4cc4e0feb31202808dd48256
-MISC ChangeLog 1961 RMD160 58d6d4e14c92ae7956fbebf5da3b77869d90f8f7 SHA1 1e56ad3c295d51c2dcd72dda95ad8f802ebd4c79 SHA256 454f5e6e3fea5596e541e5e4abedca5962fdf2fd0e3e5edf189da82362928d82
+MISC ChangeLog 2139 RMD160 ba89890bd242af5ed079b71cc03e6f41fcc55911 SHA1 2c45cfd3a334a5c7dac3b7ad261bacdd4f808140 SHA256 10026a2e82d907d8742bf5254385c01df58fda3f7f57f91b6a91101f97a38c62
 MISC metadata.xml 159 RMD160 7da5c733c224383ffe350605bc36721a3ff2536f SHA1 99c2655c7bbee2cbc8c79edb2d00d481d62faf95 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb
