@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*jaxb-2.2.1 (22 Jun 2010)
+*jaxb-2.1.13 (22 Jun 2010)
+
+  22 Jun 2010; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
+  +jaxb-2.1.13.ebuild, +jaxb-2.2.1.ebuild:
+  Version bumps
+
 *jaxb-2.2 (29 Jan 2010)
 
   29 Jan 2010; Martin von Gagern (MvG) <Martin.vGagern@gmx.net>
